--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTf-8">
   </head>
   <body>
-    <h1>Bye World!</h1>
+    <h1>Hello World?</h1>
     <script src="bundle.js"></script>
   </body>
 </html>
